Use site key for bird moniotring
